--- a/server_setting/html/index.html
+++ b/server_setting/html/index.html
@@ -16,9 +16,9 @@
 working. Further configuration is required.</p>
 
 <p>For online documentation and support please refer to
-<a href="http://nginx.org/">nginx.org</a>.<br/>
+<a>nginx.org</a>.<br/>
 Commercial support is available at
-<a href="http://nginx.com/">nginx.com</a>.</p>
+<a>nginx.com</a>.</p>
 
 <p><em>Thank you for using nginx.</em></p>
 </body>
